downloads/code/create-digitalocean-kubernetes/hello-first.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-first
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: hello-first
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-first
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-first
  template:
    metadata:
      labels:
        app: hello-first
    spec:
      containers:
      - name: hello-first
        image: hashicorp/http-echo
        args:
        - "-text=Hello from the first deployment!"
        ports:
        - containerPort: 5678
