downloads/code/create-digitalocean-kubernetes/hello-ingress-host.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: first.zunik.me
    http:
      paths:
      - backend:
          serviceName: hello-first
          servicePort: 80
  - host: second.zunik.me
    http:
      paths:
      - backend:
          serviceName: hello-second
          servicePort: 80
