downloads/code/create-digitalocean-kubernetes/hello-ingress-path.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /first 
        backend:
          serviceName: hello-first
          servicePort: 80
      - path: /second
        backend:
          serviceName: hello-second
          servicePort: 80
